--- a/src/App.scss
+++ b/src/App.scss
@@ -113,7 +113,7 @@
   position: relative;
   margin: auto;
   padding: 20px;
-  height: 100%;
+  height: 145vh;
   bottom: 105px;
   background: rgba(255, 255, 255, 0.2);
   box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
@@ -166,6 +166,20 @@
       label{
         margin-right: 100px;
       }
+    }
+  }
+  .infoContainer{
+    text-align: left;
+    color: white;
+    h3{
+      font-weight: 400;
+    }
+  }
+  .translation{
+    text-align: left;
+    color: white;
+    h3{
+      font-weight: 400;
     }
   }
 }
